--- a/model_building.Rmd
+++ b/model_building.Rmd
@@ -37,8 +37,11 @@ get_model_data <- function(season) {
     inner_join(get_dataset(paste(season, 'colleges', sep='_')), by=c('route_id', 'parent_station')) %>%  
     left_join(get_dataset(paste(season, 'terminals', sep='_')), by=c('route_id', 'parent_station')) %>%
     left_join(get_dataset(paste(season, 'ridership', sep='_')), by=c('route_id', 'parent_station')) %>%
-    mutate(
+    mutate( # this first mutate is for any where we want to keep the variables that are used
       transfer = case_when(stop_name %in% xfer_station_names ~ 1, .default=0),
+      cov_tt = sd_tt/avg_tt # coefficient of variation of travel time to CBD
+    ) %>%
+    mutate( # and this second mutate is for any where we can discard the variables that are used
       terminal = case_when(terminal == 1 ~ 1, .default=0),
       devl_mix = tot_jobs/(tot_pop + tot_jobs), 
       hh_no_vehicle_share = total_HH_no_vehicle / total_HH,
@@ -64,9 +67,10 @@ model_data_f19 <- get_model_data('f19')
 ## Descriptive Statistics
 
 ```{r}
-continuous_vars <- c('avg_boardings', 'avg_headway_wkdy', 'avg_headway_wknd', 'avg_trav_time_to_cbd', 
-                     'avg_spacing_km', 'walk_score', 'km_from_cbd', 'median_inc_1000s', 'pop_per_acre',
-                     'jobs_per_acre', 'devl_mix', 'hh_no_vehicle_share', 'avg_veh_per_hh')
+continuous_vars <- c('avg_boardings', 'avg_headway_wkdy', 'avg_headway_wknd', 
+                     'avg_trav_time_to_cbd', 'cov_tt', 'avg_spacing_km', 'walk_score', 
+                     'km_from_cbd', 'median_inc_1000s', 'pop_per_acre', 'jobs_per_acre', 
+                     'devl_mix', 'hh_no_vehicle_share', 'avg_veh_per_hh')
 sparse_vars <- c('connecting_bus_riders_100s', 'connecting_cr_routes',
                  'pnr_spaces_100s', 'college_students_1000s')
 dummy_vars <- c('Red', 'Orange', 'Green', 'Blue', 'transfer', 'terminal', 'in_bos')
@@ -134,7 +138,7 @@ model_data_f23 %>% select(all_of(continuous_vars)) %>% cor()
 
 base_reg <- function(params) {
   eval(bquote(
-    lm(.(as.symbol(paste0('avg_boardings_', params$daytype))) ~ avg_trav_time_to_cbd +
+    lm(.(as.symbol(paste0('avg_boardings_', params$daytype))) ~ avg_trav_time_to_cbd + #cov_tt +
        avg_headway + avg_spacing_km
        + Red + Orange + Blue + transfer + terminal #+ km_from_cbd
        + connecting_cr_routes + connecting_bus_routes + pnr_spaces_100s
@@ -146,7 +150,7 @@ base_reg <- function(params) {
 
 enhanced_reg <- function(params) { 
   eval(bquote(
-    lm(.(as.symbol(paste0('avg_boardings_', params$daytype))) ~ avg_trav_time_to_cbd +
+    lm(.(as.symbol(paste0('avg_boardings_', params$daytype))) ~ avg_trav_time_to_cbd + #cov_tt +
        avg_headway + avg_spacing_km
        + Red + Orange + Blue + transfer + terminal #+ km_from_cbd
        + connecting_cr_routes + connecting_bus_routes + pnr_spaces_100s
